--- a/style.css
+++ b/style.css
@@ -1,21 +1,20 @@
-/* Cores simplificadas com nomes funcionais */
 :root {
-  --color-primary: #b30000;
   /* Cor principal (botões, bordas, destaques) */
-  --color-primary-hover: #8b0000;
+  --color-primary: #660000;
   /* Hover da cor principal */
-  --background-input: #444;
+  --color-primary-hover: #470000;
   /* Fundo dos inputs e itens hover */
-  --background-container: #2c2c2c;
+  --background-input: #444;
   /* Fundo do container principal e resultado */
-  --background-sidebar: #2c2c2c;
+  --background-container: #2c2c2c;
   /* Fundo da sidebar */
-  --background-sidebar-item: #2c2c2c;
+  --background-sidebar: #2c2c2c;
   /* Fundo dos itens da sidebar */
-  --text-primary: #cccccc;
+  --background-sidebar-item: #2c2c2c;
   /* Cor principal do texto */
-  --border-input: #ccc;
+  --text-primary: #cccccc;
   /* Cor da borda dos inputs */
+  --border-input: #ccc;
 }
 
 /* Reset básico */
@@ -54,6 +53,17 @@ h1 {
   color: var(--text-primary);
 }
 
+.header-with-config {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 25px;
+}
+
+h1#title {
+  margin: 0; /* tira margem extra */
+}
+
 /* Labels e inputs */
 label {
   display: block;
@@ -79,6 +89,32 @@ input[type="number"]:focus {
   outline: none;
 }
 
+.label-explode {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 4px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: auto; 
+  width: fit-content;
+}
+
+.label-explode label {
+  font-size: 13px;
+  color: var(--text-primary);
+}
+
+.label-explode input {
+  width: 60px;
+  padding: 6px 8px;
+  font-size: 14px;
+  background-color: var(--background-input);
+  color: var(--text-primary);
+  border: 1px solid var(--border-input);
+  border-radius: 6px;
+}
+
 /* Botões */
 button {
   width: 100%;
@@ -96,6 +132,18 @@ button {
 
 button:hover {
   background-color: var(--color-primary-hover);
+}
+
+.config-btn {
+  width: auto;           /* não ocupa 100% */
+  padding: 6px 10px;     /* padding menor */
+  font-size: 20px;       /* tamanho legal para o emoji */
+  margin: 0;             /* sem margem extra */
+  background: none;
+  border: none;
+  cursor: pointer;
+  /* color: var(--text-primary); */
+  /* transition: color 0.3s; */
 }
 
 /* Resultado */
@@ -319,7 +367,7 @@ button:hover {
   select,
   a {
     font-size: 18px;
-      /*remove a cor do toque no Chrome/Safari/Android */
+    /*remove a cor do toque no Chrome/Safari/Android */
     -webkit-tap-highlight-color: transparent;
     outline: none;
     /* remove o contorno de foco */
